# MAAS

./: .dockerignore  .env.example  .gitignore  Dockerfile  LISCENCE  MAAS_Deep_Policy_Training.ipynb  README.md  auth_utils.py  blog.md  build_maas_deep_policy_notebook.py  client.py  coordinator.html  database.py  doctor.html  environment.py  environment_scenarios.py  hf_diagnosis_smoke_test.py  inference.py  maas_deep_policy.py  main.py  models.py  niva_grpo_multiturn_training.ipynb  niva_grpo_training.ipynb  niva_training.ipynb  openenv.yaml  portal_services.py  prenatal.db  preview.html  preview_work.html  pyproject.toml  readme.md  requirements-space.txt  requirements.txt  rl_risk_model.py  run_maas_deep_policy_demo.py  schemas.py  train_grpo.py  train_grpo_multiturn.py  train_openenv_ppo.py  train_trl.py  (+1 more)
results/: baseline_output.txt  baseline_report.md  baseline_vs_trained.json  benchmark_summary.md  build_submission_graphs.py  demo_script.md  final_1p5b_run_metrics.csv  final_1p5b_run_summary.md  grpo_training_summary.json  make_deadline_graphs.py  mini_writeup.md  plot_benchmark_story.py  plot_grpo_metrics.py  slide_update_notes.md  submission_evidence.md
routers/: auth.py  checkin_3day.py  checkin_daily.py  coordinator.py  diagnosis.py  doctor.py  users.py
server/: app.py
tasks/: __init__.py  task_10_gestational_htn.py  task_11_nutrition_collapse.py  task_12_multiparous_risk.py  task_13_adversarial_noise.py  task_14_latent_cholestasis.py  task_15_expert_triage.py  task_1_easy.py  task_2_medium.py  task_3_hard.py  task_4_anemia_severe.py  task_5_anemia.py  (+12 more)
(+2 files in other folders)
