[project]
name = "maas-prenatal-openenv"
version = "0.1.0"
description = "OpenEnv-compatible prenatal health monitoring environment for the Meta x PyTorch hackathon."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "sqlalchemy>=2.0.0",
  "pydantic>=2.0.0",
  "openai>=1.0.0",
  "openenv-core>=0.2.0",
]

[project.optional-dependencies]
training = [
  "transformers>=4.44.0",
  "trl>=0.10.1",
  "torch>=2.2.0",
  "accelerate>=0.33.0",
  "datasets>=2.20.0",
  "peft>=0.12.0",
  "bitsandbytes>=0.43.0; platform_system != 'Windows'",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
